--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     width: 40px;
     height: 40px;
     display: inline-block;
+    text-align: center;
 }
 
 
@@ -63,4 +64,12 @@ body{
 }
 .H div:nth-child(even){
     background: white;
+}
+
+.chessboard div:first-child {
+    background: transparent
+}
+
+.chessboard div:last-child {
+    background: transparent
 }
